# sshx

./: .gitignore  Cargo.toml  LICENSE  README.md  sshx
.cargo/: config.toml
.github/workflows/: release.yml
docs/: CLI.md  FEATURES.md
scripts/: dev.sh  install.ps1  install.sh
src/: config.rs  main.rs
src/commands/: agent.rs  key.rs  mod.rs  server.rs  utils.rs
