[package]
name = "sshx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
dialoguer = "0.11"
chrono = "0.4"
tabled = { version = "0.15", features = ["derive"] }
dirs = "5.0"
shellexpand = "3.1"
libc = "0.2" # For process exec on Unix
